# midnight-summit-hackathon-2025

./: .envrc  .mcp.json  midnight-docs.xml
.specify/memory/: constitution.md
bandaid/: .env.example  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml  setup.py
bandaid/.claude/: .claude-powerline.json
bandaid/.github/workflows/: ruff.yml
bandaid/.specify/memory/: constitution.md
bandaid/config/: blockchain-policy.txt  config.yaml.example
bandaid/docs/: architecture.md  developer-guide.md  security-layers.md
bandaid/specs/001-llm-security-proxy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
bandaid/specs/001-llm-security-proxy/checklists/: requirements.md
bandaid/specs/001-llm-security-proxy/contracts/: cli-spec.md  dashboard-api.yaml  proxy-api.yaml
bandaid/specs/002-guardrails-ai-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
bandaid/specs/002-guardrails-ai-integration/checklists/: requirements.md
bandaid/specs/002-guardrails-ai-integration/contracts/: cli-commands.md
bandaid/src/bandaid/: cli.py  config.py  main.py
bandaid/src/bandaid/cli_commands/: config_set.py  config_show.py  dashboard.py  setup.py  start.py  status.py  stop.py  validate.py
bandaid/src/bandaid/dashboard/: api.py
bandaid/src/bandaid/dashboard/static/: app.js  index.html  styles.css
bandaid/src/bandaid/learning/: embedder.py  matcher.py  pattern_store.py
bandaid/src/bandaid/observability/: logger.py  sentry.py
bandaid/src/bandaid/proxy/: hooks.py  routes.py  server.py
bandaid/src/bandaid/security/: confidence.py  guard_validator.py  ner_validator.py  patterns.py  redactor.py  validators.py
bandaid/src/bandaid/storage/: events_db.py  migrations.py  scheduler.py
bandaid/src/scripts/: download_models.py  validate_setup.py
bandaid/tests/: README.md  conftest.py  utils.py
bandaid/tests/unit/proxy/: test_hooks.py
bandaid/tests/unit/security/: test_confidence.py  test_patterns.py  test_redactor.py  test_validators.py
bandaid/tests/unit/storage/: test_events_db.py
midnight-contracts/access-control-dapp/: package-lock.json  package.json
midnight-rigging/: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  JUSTFILE.md  README.md  eslint.config.js  justfile  package.json  pnpm-lock.yaml  test-rag-connection.js  vitest.config.js
midnight-rigging/.github/workflows/: ci.yml  release-pr-review.yml  reranking-tests.yml  rigging-mcp-test.yml
midnight-rigging/.specify/memory/: constitution.md
midnight-rigging/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
midnight-rigging/midnight-plugin/: LICENSE
midnight-rigging/midnight-plugin/.claude-plugin/: plugin.json
midnight-rigging/midnight-plugin/agents/: midnight-deployment-engineer.md  midnight-source-validator.md  midnight-test-engineer.md
midnight-rigging/midnight-plugin/servers/: .gitignore  .npmrc  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
midnight-rigging/rag-mcp/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
midnight-rigging/rag-mcp/src/: server.ts
midnight-rigging/rigging-mcp/: .dockerignore  .prettierignore  Dockerfile  README.md  package-lock.json  package.json  rigging.json  rigging.json.example
midnight-rigging/rigging-mcp/src/: config.ts  discovery.ts  frontmatter.ts  index.ts  indexer.ts  prompts.ts  references.ts  resources.ts  templates.ts  types.ts
midnight-rigging/specs/001-fork-pod-rigging/: BRANDING_REFERENCE.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
midnight-rigging/tests/: mcp-server.test.js  plugin-structure.test.js
midnight-rigging/tests/templating/: filesystem.test.ts  (+3 more)
redsmith/: .env.example  .gitignore  .npmrc  .prettierignore  CLAUDE.md  DEPLOY_EDGE_FUNCTIONS.md  README.md  TESTING.md  eslint.config.js  index.html  justfile  package.json  pnpm-lock.yaml  vitest.config.ts
redsmith/src/: App.tsx  types.ts
specs/001-private-access-purchase/: data-model.md  plan.md  quickstart.md  research.md  spec.md
(+266 files in other folders)
