[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bandaid"
version = "0.1.0"
description = "Local-first LLM security proxy with multi-layer threat detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Bandaid Contributors"}
]
keywords = ["llm", "security", "proxy", "ai-safety", "prompt-injection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",

    # LLM Integration
    "litellm>=1.0.0",

    # ML Models
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",

    # Vector Database
    "chromadb>=0.4.18",

    # Data Storage
    "aiosqlite>=0.19.0",

    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # CLI
    "typer[all]>=0.9.0",
    "rich>=13.7.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Observability
    "structlog>=23.2.0",

    # HTTP Client
    "httpx>=0.25.0",

    # Encryption
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
sentry = [
    "sentry-sdk[fastapi]>=1.38.0",
]

dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
]

[project.scripts]
guardrail = "bandaid.cli:main"

[project.urls]
Homepage = "https://github.com/yourorg/bandaid"
Documentation = "https://docs.bandaid.dev"
Repository = "https://github.com/yourorg/bandaid"
"Bug Tracker" = "https://github.com/yourorg/bandaid/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bandaid = ["data/*.txt", "dashboard/static/*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["I001"]  # Ignore import sorting in test files

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

# Exclude ML/AI library files with incomplete third-party type stubs
[[tool.mypy.overrides]]
module = [
    "bandaid.security.guard_validator",
    "bandaid.security.ner_validator",
    "bandaid.learning.embedder",
    "bandaid.learning.pattern_store",
    "bandaid.cli_commands.setup",
]
ignore_errors = true

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
]
